# Breakout

./: Ball.cpp  Ball.h  CMakeLists.txt  CObject.h  Level.cpp  Level.h  Paddle.cpp  Paddle.h  README.md  Tile.cpp  Tile.h  breakout.cpp  breakout.h  main.cpp
resources/: level1.txt
